@@ -719,3 +719,4 @@
 20040407 joystick.[ch]: add emulation of the two Sinclair-type joysticks.
 20040408 input.c,keyboard.[ch],keysyms.pl: use hash tables rather than
 	 linear lookup to do the three levels of keyboard remapping.
+20040408 ui/gtk/debugger.c: add a simple memory map pane.
